--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,11 @@
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1"
+  },
+  "devDependencies": {
+    "@wdio/cli": "^8.38.2",
+    "@wdio/cucumber-framework": "^8.38.2",
+    "@wdio/local-runner": "^8.38.2",
+    "@wdio/spec-reporter": "^8.38.2"
   }
 }
