--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
-    "koa-router": "^12.0.1"
+    "koa-router": "^12.0.1",
+    "wdio-chromedriver-service": "^8.1.1"
   },
   "devDependencies": {
     "@wdio/cli": "^8.38.2",
